--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #202142;
+    background-color: #262525;
     color: #fff;
     line-height: 1.6;
 }
@@ -88,7 +88,7 @@ header {
 .rating li:hover,
 .num-display {
     background: #ff6a95;
-    color: #fff;
+    color: #000;
 }
 
 [type='radio'] {
@@ -97,7 +97,7 @@ header {
 
 [type='radio']:checked ~ label {
     background: #ff6a95;
-    color: #fff;
+    color: #000;
 }
 
 .input-group {
